enhancement: fix section 10 spacing

--- a/input.css
+++ b/input.css
@@ -87,14 +87,10 @@
   }
 
   @media (min-width: 750px) {
-    .section-6 {
-      padding-left: 3rem !important;
-      padding-right: 3rem !important;
-    }
 
     .section-10 {
-      padding-left: 1.5rem !important;
-      padding-right: 1.5rem !important;
+      padding-left: 5rem !important;
+      padding-right:5rem !important;
     }
   }
 
